<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"></import>


        <variable
            name="user"
            type="tkhub.project.sfa.data.model.user.User"/>

        <variable
            name="user_view_model"
            type="tkhub.project.sfa.viewmodels.user.UserViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAppWhite"
        tools:context=".ui.fragment.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/watch_animation"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_lock"
                app:layout_constraintBottom_toTopOf="@+id/cl_username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/bg_btn_white"
                android:elevation="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline_center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_password"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_login_lock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/app_txt_light_black_14"
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/edittext_background"
                    android:ems="10"
                    android:hint="@string/password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@={user_view_model.editTextLoginPassword}"
                    android:inputType="textPassword"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_btn_white"
                android:elevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_username"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_login_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/app_txt_light_black_14"
                    android:id="@+id/edt_username"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@color/edittext_background"
                    android:ems="10"
                    android:maxEms="10"
                    android:hint="@string/phone_number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:inputType="phone"
                    android:text="@={user_view_model.editTextLoginPhone}"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_username"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_password">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_shape_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_east_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/app_content_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorTextBlack1"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"

                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_fingerprint"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_fingerprint" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                style="@style/app_txt_light_black_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/don_t_you_have_an_account_create"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone"
            android:background="@color/colorAppWhite"
            android:visibility="@{user_view_model.layoutLoginLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_loging_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_loop="true" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/app_txt_light_black_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_wait_we_are_verifying_your_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/anim_loging_loading"
              />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>